Common :::  - created footer component;

--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -1,5 +1,5 @@
 -
-  const project = 'Giving Pool';
+  const project = 'The Giving Pool';
   const pages = [{
       name: 'Homepage',
       href: 'index.html',
