--- a/src/pug/components/common/_footer.pug
+++ b/src/pug/components/common/_footer.pug
@@ -4,4 +4,22 @@ footer#footer.footer
   .c-grid
     .footer__wrapper
 
+      h2.footer__title The giving Pool
+
+      ul.footer__social
+        li
+          a(href="#")
+            img(src="img/discord.svg" alt="")
+        li
+          a(href="#")
+            img(src="img/telegram.svg" alt="")
+        li
+          a(href="#")
+            img(src="img/twitter.svg" alt="")
+        li
+          a(href="#")
+            img(src="img/instagram.png" srcset="img/instagram@2x.png 2x" alt="")
+
+      p.footer__copyright copyright 2022 - thegivingpool.io
+
 // FOOTER :: END
