--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -135,3 +135,90 @@ picture {
   width: 100%;
   height: 100%;
 }
+
+.footer {
+  padding-top: 50px;
+  padding-bottom: 30px;
+  background-color: #000e38;
+}
+.footer__title {
+  font-weight: 900;
+  font-size: 45px;
+  line-height: 1;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #CFD7F2;
+}
+@media screen and (max-width: 1365px) {
+  .footer__title {
+    font-size: 40px;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .footer__title {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__title {
+    font-size: 33px;
+  }
+}
+.footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.footer__social a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.footer__social a:hover {
+  opacity: 0.75;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.footer__social a img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+@media screen and (max-width: 767px) {
+  .footer__social a img {
+    height: 35px;
+  }
+}
+.footer__copyright {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 1279px) {
+  .footer__copyright {
+    font-size: 14px;
+  }
+}
