--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,5 +25,5 @@
 //@import "_macros/modal";
 
 /// COMPONENTS
-//@import "_components/common/header";
-//@import "_components/common/footer";
+@import "_components/common/header";
+@import "_components/common/footer";
