--- a/src/scss/_shared/_grid.scss
+++ b/src/scss/_shared/_grid.scss
@@ -1,7 +1,7 @@
 /// ADDITIONALLY
 /// ===============
-$maxWidth: null;
-$paddingLeft: 15px;
+$maxWidth: 1690px;
+$paddingLeft: 20px;
 $paddingRight: $paddingLeft;
 
 /// MAIN
