--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,7 +2,7 @@
 @import "_utilities/*.scss";
 
 /// VENDOR
-//@import "_vendor/hamburger/_hamburgers";
+@import "_vendor/hamburger/_hamburgers";
 
 /// GENERATED
 //@import "_generated/spriteFont";
@@ -10,7 +10,7 @@
 /// SHARED
 //@import "_shared/fonts";
 @import "_shared/main-setting-reset";
-//@import "_shared/grid";
+@import "_shared/grid";
 @import "_shared/common";
 //@import "_shared/magnificPopup";
 //@import "_shared/swiper";
@@ -18,10 +18,10 @@
 
 /// MACROS
 //@import "_macros/hamburger";
-//@import "_macros/logotype";
+@import "_macros/logotype";
 //@import "_macros/title";
 //@import "_macros/subtitle";
-//@import "_macros/btn";
+@import "_macros/btn";
 //@import "_macros/modal";
 
 /// COMPONENTS
