--- a/src/scss/_components/common/_header.scss
+++ b/src/scss/_components/common/_header.scss
@@ -1,5 +1,168 @@
 // HEADER :: START
 
-.header {}
+.header {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #0b1a4d;
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 110px;
+    @include adaptive(767) {
+      height: 80px;
+    }
+
+    &-left {
+      display: flex;
+      align-items: center;
+      @include adaptive(1439) {
+        justify-content: space-between;
+        width: 100%;
+      }
+
+      > div {
+        display: flex;
+        align-items: center;
+
+        &:nth-of-type(1) {
+          @include adaptive(767) {
+            .c-btn {
+              display: none;
+            }
+          }
+        }
+
+        &:nth-of-type(2) {
+          display: none;
+          @include adaptive(1439) {
+            display: flex;
+          }
+        }
+      }
+    }
+
+    &-middle {
+      flex: 1;
+      min-width: 1px;
+      max-width: 100%;
+    }
+
+    &-right {
+      display: flex;
+      justify-content: flex-end;
+      @include adaptive(1439) {
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+      }
+
+      .c-btn {
+        @include adaptive(1439) {
+          width: 100%;
+        }
+
+        &:not(:last-of-type) {
+          margin-right: 15px;
+          @include adaptive(1439) {
+            margin-right: 0;
+            margin-bottom: 20px;
+          }
+        }
+
+        &__wrapper {
+          @include adaptive(1439) {
+            width: 100%;
+            flex-direction: column;
+          }
+        }
+      }
+    }
+
+    &-mobile {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex: 1;
+      min-width: 1px;
+      max-width: 100%;
+      padding-left: 20px;
+      @include adaptive(1439) {
+        z-index: 1000;
+        overflow: hidden;
+        overflow-y: auto;
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(-100%);
+        position: fixed;
+        top: 110px;
+        left: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex: unset;
+        width: 100%;
+        max-width: 400px;
+        height: calc(100% - 110px);
+        padding: 20px;
+        border-top: 1px solid rgba(#fff, 0.1);
+        box-shadow: 5px 0 10px 0 rgba(#000e38, 0.3);
+        background-color: #0b1a4d;
+        @include transition(opacity, visibility, transform);
+
+        &.is-open {
+          opacity: 1;
+          visibility: visible;
+          transform: translateX(0);
+          @include transition(opacity, visibility, transform);
+        }
+      }
+      @include adaptive(767) {
+        top: 80px;
+        height: calc(100% - 80px);
+      }
+    }
+  }
+
+  &__nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include adaptive(1439) {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 20px;
+      margin-right: 20px;
+      font-size: 24px;
+      text-align: center;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      @extend %fontFiraSans;
+      @include hoverState(#fff);
+      @include adaptive(1535) {
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 22px;
+      }
+      @include adaptive(1439) {
+        margin-bottom: 30px;
+      }
+      @include adaptive(767) {
+        font-size: 20px;
+      }
+    }
+  }
+}
 
 // HEADER :: END
