--- a/src/scss/_shared/_main-setting-reset.scss
+++ b/src/scss/_shared/_main-setting-reset.scss
@@ -3,9 +3,25 @@ body {
   width: 100%;
   min-height: 100vh;
 
+  &:after {
+    content: '';
+    z-index: 990;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000e38, 0.55);
+  }
+
   &.is-hideScroll {
     overflow: hidden !important;
     width: 100%;
+
+    &:after {
+      display: block;
+    }
   }
 }
 
@@ -26,6 +42,7 @@ body {
   font-size: 14px;
   font-weight: normal;
   font-family: "Poppins", sans-serif;
+  letter-spacing: 3px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
