--- a/src/pug/whitepaper.pug
+++ b/src/pug/whitepaper.pug
@@ -1,5 +1,5 @@
 ---
-title: The Giving Pool
+title: The Giving Pool | WhitePaper
 
 pageClassName: p-home
 ---
@@ -8,4 +8,4 @@ extends shared/_layout
 block content
   main.main(class!= pageClassName)
 
-
+    include components/whitepaper
